<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/textview_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

    <RadioGroup
        android:id="@+id/tip_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        android:checkedButton="@id/twenty_percent_option">
        <!--   Radio Button To be added     -->
        <RadioButton
            android:id="@+id/twenty_percent_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_twenty_percent" />

        <RadioButton
            android:id="@+id/eighteen_percent_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_eighteen_percent" />

        <RadioButton
            android:id="@+id/fifteen_percent_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_fifteen_percent" />
    </RadioGroup>

    <Switch
        android:layout_marginTop="16dp"
        android:id="@+id/round_tip_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_tip_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_selector"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_tip_switch" />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        android:text="@string/tip_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>